// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameDetails renders proposed names 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="mm-box"
    />
  </div>
  <div
    class="mm-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-4 mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
        >
          <div
            class="mm-box mm-header-base mm-modal-header mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box"
              style="min-width: 0px;"
            >
              <button
                aria-label="Back"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/arrow-left.svg');"
                />
              </button>
            </div>
            <div
              class="mm-box"
            >
              <header
                class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
              >
                Saved address
              </header>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </div>
          <div
            style="text-align: center; margin-bottom: 16px; margin-top: 8px;"
          >
            <div>
              <div
                class="name name__saved"
              >
                <span
                  class="mm-box name__icon mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/save.svg');"
                />
                <span
                  class="name__name"
                >
                  TestName
                </span>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-4 mm-box--justify-content-space-between mm-box--color-text-default"
          >
            Interactions with this address will always be identified using this personal display name.
          </p>
          <hr
            class="name-details__line"
          />
          <div
            class="box mm-form-text-field mm-form-text-field--disabled name-details__address box--margin-bottom-4 box--display-flex box--flex-direction-column"
          >
            <label
              class="mm-box mm-text mm-label mm-label--html-for mm-form-text-field__label mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
              for="address"
            >
              Address
            </label>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-4 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-sm mm-box--border-width-1 box--border-style-solid"
            >
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                disabled=""
                focused="false"
                id="address"
                type="text"
                value="0xC0ffee254729296a45A3885639aC7E10f9d54977"
              />
              <button
                aria-label="Copy address to clipboard"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/copy.svg');"
                />
              </button>
            </div>
          </div>
          <label
            class="mm-box mm-text mm-label name-details__display-name mm-text--body-md mm-text--font-weight-medium mm-box--margin-bottom-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--align-items-flex-start mm-box--color-text-default"
          >
            Display name
            <div
              class="form-combo-field"
            >
              <div>
                <div
                  class="box mm-form-text-field form-combo-field__value form-combo-field__value-dropdown-visible box--display-flex box--flex-direction-column"
                >
                  <div
                    class="mm-box mm-text-field mm-text-field--size-md mm-text-field--focused mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-4 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-sm mm-box--border-width-1 box--border-style-solid"
                  >
                    <input
                      autocomplete="off"
                      class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                      focused="true"
                      placeholder="Set a personal display name..."
                      type="text"
                      value="TestName"
                    />
                    <button
                      aria-label="Clear"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/close.svg');"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="form-combo-field__dropdown"
                style="width: 0px; max-height: 179px;"
              >
                <div
                  class="form-combo-field__option"
                  tabindex="0"
                >
                  <span
                    class="form-combo-field__option-primary"
                  >
                    TestProposedName
                  </span>
                  <span
                    class="form-combo-field__option-secondary"
                  >
                    TestSourceId1
                  </span>
                </div>
                <div
                  class="form-combo-field__option"
                  tabindex="0"
                >
                  <span
                    class="form-combo-field__option-primary"
                  >
                    TestProposedName2
                  </span>
                  <span
                    class="form-combo-field__option-secondary"
                  >
                    TestSourceId2
                  </span>
                </div>
              </div>
            </div>
          </label>
          <hr
            class="name-details__line"
          />
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-pill"
          >
            Ok
          </button>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`NameDetails renders with no saved name 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="mm-box"
    />
  </div>
  <div
    class="mm-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-4 mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
        >
          <div
            class="mm-box mm-header-base mm-modal-header mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box"
              style="min-width: 0px;"
            >
              <button
                aria-label="Back"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/arrow-left.svg');"
                />
              </button>
            </div>
            <div
              class="mm-box"
            >
              <header
                class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
              >
                Unknown address
              </header>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </div>
          <div
            style="text-align: center; margin-bottom: 16px; margin-top: 8px;"
          >
            <div>
              <div
                class="name name__missing"
              >
                <span
                  class="mm-box name__icon mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/warning.svg');"
                />
                <span
                  class="name__value"
                >
                  0xc0ffe...54979
                </span>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-4 mm-box--justify-content-space-between mm-box--color-text-default"
          >
            You are interacting with an unknown contract address. If you trust this author, set a personal display name to identify it going forward.
          </p>
          <hr
            class="name-details__line"
          />
          <div
            class="box mm-form-text-field mm-form-text-field--disabled name-details__address box--margin-bottom-4 box--display-flex box--flex-direction-column"
          >
            <label
              class="mm-box mm-text mm-label mm-label--html-for mm-form-text-field__label mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
              for="address"
            >
              Address
            </label>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-4 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-sm mm-box--border-width-1 box--border-style-solid"
            >
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                disabled=""
                focused="false"
                id="address"
                type="text"
                value="0xc0ffee254729296a45a3885639AC7E10F9d54979"
              />
              <button
                aria-label="Copy address to clipboard"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/copy.svg');"
                />
              </button>
            </div>
          </div>
          <label
            class="mm-box mm-text mm-label name-details__display-name mm-text--body-md mm-text--font-weight-medium mm-box--margin-bottom-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--align-items-flex-start mm-box--color-text-default"
          >
            Display name
            <div
              class="form-combo-field"
            >
              <div>
                <div
                  class="box mm-form-text-field form-combo-field__value box--display-flex box--flex-direction-column"
                >
                  <div
                    class="mm-box mm-text-field mm-text-field--size-md mm-text-field--focused mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-4 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-sm mm-box--border-width-1 box--border-style-solid"
                  >
                    <input
                      autocomplete="off"
                      class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                      focused="true"
                      placeholder="Set a personal display name..."
                      type="text"
                      value=""
                    />
                    <button
                      aria-label="Clear"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/close.svg');"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </label>
          <hr
            class="name-details__line"
          />
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-pill"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/save.svg');"
            />
            Save
          </button>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`NameDetails renders with saved name 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="mm-box"
    />
  </div>
  <div
    class="mm-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-4 mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
        >
          <div
            class="mm-box mm-header-base mm-modal-header mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box"
              style="min-width: 0px;"
            >
              <button
                aria-label="Back"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/arrow-left.svg');"
                />
              </button>
            </div>
            <div
              class="mm-box"
            >
              <header
                class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
              >
                Saved address
              </header>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </div>
          <div
            style="text-align: center; margin-bottom: 16px; margin-top: 8px;"
          >
            <div>
              <div
                class="name name__saved"
              >
                <span
                  class="mm-box name__icon mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/save.svg');"
                />
                <span
                  class="name__name"
                >
                  TestName
                </span>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-4 mm-box--justify-content-space-between mm-box--color-text-default"
          >
            Interactions with this address will always be identified using this personal display name.
          </p>
          <hr
            class="name-details__line"
          />
          <div
            class="box mm-form-text-field mm-form-text-field--disabled name-details__address box--margin-bottom-4 box--display-flex box--flex-direction-column"
          >
            <label
              class="mm-box mm-text mm-label mm-label--html-for mm-form-text-field__label mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
              for="address"
            >
              Address
            </label>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--disabled mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-4 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-sm mm-box--border-width-1 box--border-style-solid"
            >
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-input--disabled mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                disabled=""
                focused="false"
                id="address"
                type="text"
                value="0xC0ffee254729296a45A3885639aC7E10f9d54977"
              />
              <button
                aria-label="Copy address to clipboard"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/copy.svg');"
                />
              </button>
            </div>
          </div>
          <label
            class="mm-box mm-text mm-label name-details__display-name mm-text--body-md mm-text--font-weight-medium mm-box--margin-bottom-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--align-items-flex-start mm-box--color-text-default"
          >
            Display name
            <div
              class="form-combo-field"
            >
              <div>
                <div
                  class="box mm-form-text-field form-combo-field__value box--display-flex box--flex-direction-column"
                >
                  <div
                    class="mm-box mm-text-field mm-text-field--size-md mm-text-field--focused mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-4 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-sm mm-box--border-width-1 box--border-style-solid"
                  >
                    <input
                      autocomplete="off"
                      class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                      focused="true"
                      placeholder="Set a personal display name..."
                      type="text"
                      value="TestName"
                    />
                    <button
                      aria-label="Clear"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/close.svg');"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </label>
          <hr
            class="name-details__line"
          />
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-pill"
          >
            Ok
          </button>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
